[workspace]
members = [
    "verilator",
    "spade-support/spade",
    "spade-support/spade-macro",
    "spade-support/example-project/test",
    "verilog-support/verilog",
    "verilog-support/verilog-macro",
    "verilog-support/verilog-macro-builder",
    "verilog-support/example-project",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Ethan Uppal"]
edition = "2021"
rust-version = "1.83"
description = "🦀 No nonsense hardware testing in Rust 🛠️"
repository = "https://github.com/ethanuppal/dumbname"
readme = "README.md"
license = "MPL-2.0"

[workspace.dependencies]
snafu = "0.8.5"
camino = "1.1.9"
libc = "0.2.169"
libloading = "0.8.6"
proc-macro2 = "1.0.93"
syn = { version = "2.0.96", features = ["full"] }
quote = "1.0.38"
sv-parser = "0.13.3"
spade-parser = "0.12.1"
spade-ast = "0.12.1"
logos = "0.15"                                    # vague until Spade reexports logos
log = "0.4.25"
colog = "1.3.0"

verilator = { path = "verilator" }
verilog = { path = "verilog-support/verilog" }
spade = { path = "spade-support/spade" }
